--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Movies Finder</title>
+  <title>sdfsdf</title>
   <link rel="stylesheet" href="//bootswatch.com/3/superhero/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
-  <base href="/">
+  <base href="/739ChKBvtn1564040_op/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <app-root>
-    <div class="loader">Loading...</div>
+    <div class="loader">Loading</div>
   </app-root>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
